chore: synchronize framework acceptance sources